--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "My personal website. Written in Node/Express.",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "chalk": "^4.1.1",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
+    "markdown-it": "^12.0.6",
+    "npm-install": "^1.7.4",
+    "serve-index": "^1.9.1",
+    "serve-static": "^1.14.1"
   },
   "devDependencies": {},
   "scripts": {
